Use dosbox-staging icon and .desktop tweak
Use official vector icon instead of raster

Add StartupWMClass to desktop entry to allow users to correlate/override
application icon without risk of conflict with other binaries sharing
"dosbox" name.

--- a/snap/gui/dosbox-staging.desktop
+++ b/snap/gui/dosbox-staging.desktop
@@ -16,8 +16,9 @@ Comment[nl]=Een simulator om oude DOS-spellen te spelen
 Comment[ru]=Запуск старых DOS-приложений
 Comment[it]=Un emulatore per far girare vecchi giochi DOS
 Comment[ua]=Запуск старих DOS-застосувань
-Icon=${SNAP}/meta/gui/dosbox-staging.png
+Icon=${SNAP}/meta/gui/dosbox-staging.svg
 Exec=dosbox-staging
 Terminal=false
 Categories=Game;Emulator;
 Keywords=DOS Emulator;
+StartupWMClass=dosbox-staging
