--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,6 +21,9 @@ grade: stable
 confinement: strict
 base: core18
 
+architectures:
+  - build-on: [i386, amd64, armhf, arm64]
+
 apps:
   dosbox-staging:
     command: desktop-launch dosbox
