--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,7 +22,10 @@ confinement: strict
 base: core18
 
 architectures:
-  - build-on: [i386, amd64, armhf, arm64]
+  - build-on: i386
+  - build-on: amd64
+  - build-on: arm64
+  - build-on: armhf
 
 apps:
   dosbox-staging:
