--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,7 +41,7 @@ parts:
       snapcraftctl pull
       last_committed_tag="$(git describe --tags `git rev-list --tags --max-count=1`)"
       echo $last_committed_tag
-      last_released_tag="$(snap info $SNAPCRAFT_PROJECT_NAME | awk '$1 == "latest/beta:" { print $2 }')"
+      last_released_tag=v"$(snap info $SNAPCRAFT_PROJECT_NAME | awk '$1 == "latest/beta:" { print $2 }')"
       echo $last_released_tag
       # If the latest tag from the upstream project has not been released to
       # beta, build that tag instead of master.
@@ -49,7 +49,7 @@ parts:
         git fetch
         git checkout "${last_committed_tag}"
         echo "Setting version to $last_committed_tag"
-        snapcraftctl set-version "${last_committed_tag}"
+        snapcraftctl set-version "$(echo $last_committed_tag | tr -d 'v')"
       else
         echo "Setting version to $(git rev-parse --short HEAD)"
         snapcraftctl set-version "$(git rev-parse --short HEAD)"
