--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -29,7 +29,7 @@ architectures:
 apps:
   dosbox-staging:
     command: usr/local/bin/dosbox
-    plugs: [audio-playback, home, audio-playback, audio-record, desktop, desktop-legacy, wayland, x11, opengl, removable-media, joystick]
+    plugs: [audio-playback, home, audio-record, desktop, desktop-legacy, wayland, x11, opengl, removable-media, joystick]
     extensions: [gnome-3-38]
     environment: 
       LD_LIBRARY_PATH: $SNAP/usr/local/lib
