--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -31,19 +31,22 @@ apps:
     command: usr/local/bin/dosbox
     plugs: [audio-playback, home, audio-record, desktop, desktop-legacy, wayland, x11, opengl, removable-media, joystick]
     extensions: [gnome-3-38]
-    environment: 
-      LD_LIBRARY_PATH: $SNAP/usr/local/lib
+    # environment: 
+    #   LD_LIBRARY_PATH: $SNAP/usr/local/lib
 
 parts:
   fluidsynth:
     source: https://github.com/FluidSynth/fluidsynth.git
     plugin: cmake
     source-tag: "v2.2.5"
+    organize:
+      usr/local/lib64/lib*.so*: usr/lib/
   mt:
     source: https://github.com/munt/munt.git
     plugin: cmake
     source-subdir: "mt32emu"
-
+    organize:
+      usr/local/lib/lib*.so*: usr/lib/
   dosbox-staging:
     after: [mt, fluidsynth]
     plugin: meson
@@ -93,15 +96,15 @@ parts:
       - -usr/share/lintian
       - -usr/share/man
 
-  cleanup:
-    after: [dosbox-staging]
-    plugin: nil
-    build-snaps:
-      - core20
-      - gtk-common-themes
-      - gnome-3-38-2004
-    override-prime: |
-      set -eux
-      for snap in "core20" "gtk-common-themes" "gnome-3-38-2004"; do
-        cd "/snap/$snap/current" && find . -type f,l -exec rm -r "$SNAPCRAFT_PRIME/{}" \;
-      done
+  # cleanup:
+  #   after: [dosbox-staging]
+  #   plugin: nil
+  #   build-snaps:
+  #     - core20
+  #     - gtk-common-themes
+  #     - gnome-3-38-2004
+  #   override-prime: |
+  #     set -eux
+  #     for snap in "core20" "gtk-common-themes" "gnome-3-38-2004"; do
+  #       cd "/snap/$snap/current" && find . -type f,l -exec rm -r "$SNAPCRAFT_PRIME/{}" \;
+  #     done
